# moltis

./: CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  Cargo.toml  README.md  agent-presets.html  anthropic-oauth.html  authentication.html  browser-automation.html  caldav.html  changelog.html  channels.html  checkpoints.html  choosing-a-provider.html  cloud-deploy.html  commands.html  compaction.html  comparison.html  configuration-reference.html  configuration.html  deploy-vps.html  discord.html  docker.html  e2e-testing.html  flake.nix  fly.toml  frontend.html  graphql.html  hooks.html  index.html  installation.html  justfile  local-llm.html  local-validation.html  macos-app-ffi-bridge.html  matrix.html  mcp.html  memory-comparison.html  memory-surfaces.html  memory.html  (+42 more)
.do/: deploy.template.yaml
.github/workflows/: release.yml
00/68501b6865/: metadata.json
01/700b0e7250/: metadata.json
02/004b08c40c/: metadata.json
02/c84250e392/: metadata.json
04/71f961fcf6/: metadata.json
04/9ac216ac14/: metadata.json
04/d1c874f413/: metadata.json
05/54bc01dc08/: metadata.json
05/f0dd7e8156/: metadata.json
07/57952ad9e7/: metadata.json
07/cd76e4941e/: metadata.json
08/46461a11d6/: metadata.json
08/bc5b1f3a3f/: metadata.json
0a/659a7a18c1/: metadata.json
0d/7525749b10/: metadata.json
0d/b97ecdd06f/: metadata.json
0e/46a15b6976/: metadata.json
0e/6239b5710c/: metadata.json
0f/67c346f032/: metadata.json
10/ddf5ebd8d8/: metadata.json
12/1062ea3825/: metadata.json
12/351819ffc6/: metadata.json
12/53fd1d0aee/: metadata.json
13/11caf3c550/: metadata.json
13/f20cc7be13/: metadata.json
14/32740ece25/: metadata.json
17/2cb0957341/: metadata.json
17/379e8abfdf/: metadata.json
19/da8e8c92f3/: metadata.json
1b/5ed6ad8d52/: metadata.json
1b/ccd27bfa70/: metadata.json
1c/0b1383c18e/: metadata.json
1c/f2bc56081a/: metadata.json
1e/9664f55ad5/: metadata.json
20/013abc2796/: metadata.json
22/01c4b39939/: metadata.json
22/0d8f38930b/: metadata.json
22/34a5f36008/: metadata.json
23/97eeb1a609/: metadata.json
23/f41fb4db47/: metadata.json
24/ce73778b5a/: metadata.json
26/1bd146b2d8/: metadata.json
26/96f140ed68/: metadata.json
27/b133e1435a/: metadata.json
28/138c8eeff4/: metadata.json
28/60ff44e09b/: metadata.json
28/b9900be3c1/: metadata.json
28/e2275b3ebe/: metadata.json
28/e3841e4d2b/: metadata.json
29/1f022d0952/: metadata.json
29/53216042d3/: metadata.json
2a/0018c0a9ba/: metadata.json
2a/8922971d34/: metadata.json
2b/b87598b9b0/: metadata.json
2c/b39859baad/: metadata.json
2c/d4fe00c88b/: metadata.json
2f/98e8369038/: metadata.json
31/3a9f1e05da/: metadata.json
32/6832094d27/: metadata.json
32/8226d67e6b/: metadata.json
32/d68494cab4/: metadata.json
35/18b049d0a3/: metadata.json
35/ba8ef4df38/: metadata.json
35/c42972f8e6/: metadata.json
36/03c5b90d7e/: metadata.json
36/5150329fac/: metadata.json
3b/28a315d0c4/: metadata.json
3b/c8a0588e95/: metadata.json
3b/d215a6e815/: metadata.json
3c/21d55f0e69/: metadata.json
3c/271b847530/: metadata.json
3d/594e395d28/: metadata.json
3f/899112cf65/: metadata.json
3f/f3aaf1c445/: metadata.json
40/7f3de83779/: metadata.json
40/cb7e2efab6/: metadata.json
40/ec36fd5f81/: metadata.json
41/00596d19db/: metadata.json
41/3041559928/: metadata.json
42/b363de7265/: metadata.json
43/3a46b5f3fb/: metadata.json
43/3aedf55053/: metadata.json
45/094da1b044/: metadata.json
45/903b790fdd/: metadata.json
48/9295b3600a/: metadata.json
48/b99271dd25/: metadata.json
49/99fc827276/: metadata.json
4a/afec362458/: metadata.json
4c/27621421fb/: metadata.json
4c/3106eb715e/: metadata.json
4c/f85a13cb66/: metadata.json
4d/28d7201a55/: metadata.json
4d/70653a25dc/: metadata.json
4e/75121cffec/: metadata.json
4e/8cfe8c7a17/: metadata.json
4f/32b53d3776/: metadata.json
50/14c25a0f4d/: metadata.json
51/ce5c4e5420/: metadata.json
52/8b5c5237e7/: metadata.json
54/551b413771/: metadata.json
55/fc131207b4/: metadata.json
56/57043b27a1/: metadata.json
56/6c41646e06/: metadata.json
57/fe76bc55f2/: metadata.json
59/31f321fdde/: metadata.json
59/6dc7daab13/: metadata.json
5b/263c8de09d/: metadata.json
5b/500c0adc70/: metadata.json
5b/6c8e7eb8bb/: metadata.json
5c/0ae9808875/: metadata.json
5c/66e532116e/: metadata.json
5d/1fc5bc6f65/: metadata.json
5d/d2dbf04f1d/: metadata.json
channels/: telephony.html
crates/agents/: Cargo.toml
crates/agents/src/: prompt.rs  runner.rs  silent_turn.rs
crates/agents/src/prompt/: builder.rs  tests.rs
crates/agents/src/runner/: helpers.rs  streaming.rs
crates/agents/src/runner/tests/: basic.rs  basic_tool_names.rs  basic_tool_results.rs  mod.rs  parallel.rs
crates/chat/: Cargo.toml
crates/chat/src/: agent_loop.rs  lib.rs  memory_tools.rs  message.rs  run_with_tools.rs  runtime.rs  streaming.rs  types.rs
crates/chat/src/memory_tools/: tests.rs
crates/chat/src/service/chat_impl/: send.rs
crates/home-assistant/: Cargo.toml
crates/home-assistant/src/: client.rs  client_ext.rs  config.rs  error.rs  lib.rs  tool.rs  types.rs  ws.rs
crates/work/: Cargo.toml
crates/work/migrations/: 20260401120000_init.sql  20260401143000_budget_and_costs.sql  20260402090000_templates_and_recurring.sql  20260402113000_tracker_links.sql
crates/work/src/: error.rs  lib.rs  portability.rs  store.rs  types.rs
scripts/: check-file-size.sh  local-validate.sh
website/: releases.json
(+2047 files in other folders)
