[package]
edition.workspace = true
name              = "moltis-agents"
version.workspace = true

[features]
default = ["metrics", "tracing"]
metrics = ["dep:moltis-metrics"]
tracing = ["dep:opentelemetry", "dep:tracing-opentelemetry"]

[dependencies]
anyhow          = { workspace = true }
async-stream    = { workspace = true }
async-trait     = { workspace = true }
futures         = { workspace = true }
moltis-common   = { workspace = true }
moltis-config   = { workspace = true }
moltis-sessions = { workspace = true }
moltis-skills   = { workspace = true }
opentelemetry   = { optional = true, workspace = true }
reqwest         = { workspace = true }
secrecy         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
tokio-stream    = { workspace = true }
tracing         = { workspace = true }
tracing-opentelemetry = { optional = true, workspace = true }
uuid            = { workspace = true }

# Optional
moltis-metrics = { optional = true, workspace = true }

[dev-dependencies]
axum     = { workspace = true }
http     = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
