[package]
edition.workspace = true
name              = "moltis-work"
version.workspace = true

[dependencies]
moltis-cron = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx       = { workspace = true }
thiserror  = { workspace = true }
time       = { workspace = true }
tokio      = { workspace = true }
uuid       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { features = ["macros", "rt-multi-thread"], workspace = true }

[lints]
workspace = true
